# specman-e-parser

./: .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  ast_visitor.cpp  ast_visitor.hpp  ast_visitor_base.cpp  ast_visitor_base.hpp  driver.cpp  driver.hpp  ectags-main.cpp  flex-main  gazelle_python.yaml  main-flex.cpp  main.cpp  out.parse  parser-main.cpp  scanner.hpp  specman-tree-handcode.hpp  specman-tree.cpp  specman-tree.hpp  specman.aps  specman.flex  specman.y  strtab.cpp  strtab.hpp  tree.cpp  tree.hpp  utils.cpp  utils.hpp
apsgen/: apsast.py  apsastgen.py  apsgen.py  apslang.py  apstempgen.py
apsgen/templates/declarations/: constructor.tpl  list_phylum.tpl  module.tpl  phylum.tpl
apsgen/templates/definitions/: constructor.tpl  formal.tpl  list_phylum.tpl  module.tpl  phylum.tpl
apsgen/tests/modules/: cool.aps  specman.aps
tools/format/: BUILD.bazel
tools/lint/: BUILD.bazel  linters.bzl
